--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
 		"apollo-server-express": "^3.6.3",
 		"argon2": "^0.28.5",
 		"connect-pg-simple": "^7.0.0",
+		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
 		"express-session": "^1.17.2",
 		"graphql": "15.8.0",
