--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,7 @@
 		"watch": "tsc -w",
 		"dev": "nodemon dist/index.js",
 		"start": "node dist/index.js",
-		"start2": "ts-node src/index.ts",
-		"create:migration": "mikro-orm migration:create"
+		"start2": "ts-node src/index.ts"
 	},
 	"license": "MIT",
 	"devDependencies": {
@@ -24,10 +23,6 @@
 		"typescript": "^4.5.5"
 	},
 	"dependencies": {
-		"@mikro-orm/cli": "^5.0.5",
-		"@mikro-orm/core": "^5.0.5",
-		"@mikro-orm/migrations": "^5.0.5",
-		"@mikro-orm/postgresql": "^5.0.5",
 		"apollo-server-express": "^3.6.3",
 		"argon2": "^0.28.5",
 		"connect-pg-simple": "^7.0.0",
@@ -39,6 +34,7 @@
 		"pg": "^8.7.3",
 		"reflect-metadata": "^0.1.13",
 		"type-graphql": "^1.1.1",
+		"typeorm": "^0.2.45",
 		"uuid": "^8.3.2"
 	},
 	"mikro-orm": {
