--- a/web/package.json
+++ b/web/package.json
@@ -11,8 +11,9 @@
 		"@chakra-ui/react": "^1.4.2",
 		"@chakra-ui/theme-tools": "1.1.2",
 		"@emotion/react": "11.1.5",
-		"@emotion/styled": "11.1.5",
+		"@emotion/styled": "^11.8.1",
 		"@urql/exchange-graphcache": "^4.3.6",
+		"emotion-theming": "^11.0.0",
 		"formik": "^2.2.9",
 		"framer-motion": "^4.0.3",
 		"graphql": "^16.3.0",
