--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,7 @@
 		"gen": "graphql-codegen --config codegen.yml"
 	},
 	"dependencies": {
-		"@chakra-ui/icons": "^1.0.5",
+		"@chakra-ui/icons": "^1.1.7",
 		"@chakra-ui/react": "^1.4.2",
 		"@chakra-ui/theme-tools": "1.1.2",
 		"@emotion/react": "11.1.5",
@@ -17,6 +17,7 @@
 		"formik": "^2.2.9",
 		"framer-motion": "^4.0.3",
 		"graphql": "^16.3.0",
+		"graphql-tag": "^2.12.6",
 		"js-yaml": "^4.1.0",
 		"next": "latest",
 		"next-urql": "^3.3.2",
